[package]
name = "testing-workshop"
version = "0.1.0"
authors = ["Gavrie Philipson <gavrie@philipson.co.il>"]
edition = "2018"

#[[bin]]
#name = "00_add_main"

[dependencies.quickcheck]
version = "0.9"
features = ["use_logging"]

[dependencies]
quickcheck_macros = "0.9"
rand = "0.7"
#twoway = "0.2.1"
#indoc = "0.3.5"
thiserror = "1.0.15"
